# TCGscanner

./: .gitignore  ARCHITECTURE.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  pyproject.toml  requirements.txt  scanner.py
annotations/: images__pricecharting__riftbound-origins__10_legion_rearguard.jpg.json  images__pricecharting__riftbound-unleashed__3_mischevious_marai.jpg.json
data/: official_cards.json  pricecharting_cards.json  prices_fixture.json  riftbound_cards.json  unleashed_cards.json
docs/: ARCHITECTURE_IMAGE_GUIDE.md  LINKEDIN_POST_DRAFT.md  PUBLICATION_CHECKLIST.md
public/: annotate.css  annotate.html  annotate.js  app.js  index.html  styles.css
riftbound_scanner/: __init__.py  annotations.py  cardmarket.py  catalog.py  models.py  official_gallery.py  pricecharting.py  pricing.py  region_detector.py  server.py  universal_yolo.py  vector_store.py  visual.py
scripts/: build_vector_index.py  download_detector.py  download_universal_tcg_subset.py  eval_pricecharting_retrieval.py  eval_region_detector.py  eval_visual_retrieval.py  export_region_detector.py  import_official_cards.py  import_official_unleashed.py  import_pricecharting_catalog.py  prepare_universal_yolo_dataset.py  prepare_yolo_dataset.py  publish_detector_to_hf.py  search_image.py  setup_project.py  train_region_detector.py  train_universal_region_detector.py
tests/: test_catalog_pricing.py  test_official_gallery_importer.py  test_server_security.py  test_setup_scripts.py  test_universal_yolo.py  test_visual_pipeline.py
