[project]
name = "riftbound-scanner"
version = "0.1.0"
description = "Riftbound card scanner MVP with visual embeddings, vector search, and pricing adapters."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "lancedb>=0.18.0",
  "pillow>=11.0.0",
  "opencv-python==4.12.0.88",
  "numpy>=2.0.0",
  "transformers>=4.45.0",
  "torch>=2.4.0",
  "torchvision>=0.19.0",
  "ultralytics>=8.3.0",
  "onnx>=1.17.0",
  "onnxslim>=0.1.82",
  "onnxruntime>=1.20.0",
  "mlflow>=2.17.0",
  "datasets>=3.0.0",
]

[tool.uv]
package = false
